--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -16,7 +16,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "vite": "^6.3.3"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
@@ -27,7 +28,6 @@
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "typescript": "^5.8.3",
-    "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
