--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -10,14 +10,14 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "vite": "^6.3.3",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3",
-    "react-router-dom": "^7.6.0",
-    "vite": "^6.3.3"
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
@@ -28,6 +28,7 @@
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "typescript": "^5.8.3",
+    "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
